Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Patch to get latest CMFCatalogAware _cmf_security_indexes attribute.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-